<resources>
    <string name="app_name">SuperShop</string>
    <string name="hint_nombre">Nombre:</string>
    <string name="hint_precio">Precio:</string>
    <string name="hint_categoria">Categoria:</string>
    <string name="btn_agregar">Añadir</string>
    <string name="menu_nuevo">Nuevo registro</string>
    <string-array name="category">
        <item>Elegir Categoria</item>
        <item>Vegetales</item>
        <item>Frutas</item>
        <item>Bebestibles</item>
        <item>Otro</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="sync_header">Diseño App</string>
    <string name="order_header">Vista de productos</string>
    <string name="day_header">Tiempo de recordatorio</string>

    <!-- Messages Preferences -->
    <string name="order_title">Vista de productos</string>
    <string name="day_title">Tiempo de recordatorio</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Modo Oscuro</string>

</resources>