<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/order_header">

        <ListPreference
            android:defaultValue="name"
            android:entries="@array/order_entries"
            android:entryValues="@array/order_values"
            android:key="order_preference"
            android:title="@string/order_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/day_header">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/day_entries"
            android:entryValues="@array/day_values"
            android:key="day_preference"
            android:title="@string/day_title" />
    </PreferenceCategory>

</PreferenceScreen>